[workspace]
members = [
    "packages/client",
    "packages/codec",
    "packages/open-protocol",
    "packages/mqtt-adapter",
    "packages/codec-proc-macro",
    "packages/client"
]
resolver = "2"

[workspace.dependencies]
open-protocol = { version = "0.1.0", path = "packages/open-protocol" }
open-protocol-client = { version = "0.0.0", path = "packages/client" }
open-protocol-codec = { version = "0.1.0", path = "packages/codec" }
open-protocol-codec-proc-macro = { version = "0.1.0", path = "packages/codec-proc-macro" }
